chore(package): update dependencies fix(tests): use not-deprecated wait for async

--- a/package.json
+++ b/package.json
@@ -14,48 +14,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.2",
-    "@angular/cdk": "^10.0.1",
-    "@angular/common": "~10.0.2",
-    "@angular/compiler": "~10.0.2",
-    "@angular/core": "~10.0.2",
+    "@angular/animations": "~10.1.1",
+    "@angular/cdk": "~10.1.1",
+    "@angular/common": "~10.1.1",
+    "@angular/compiler": "~10.1.1",
+    "@angular/core": "~10.1.1",
     "@angular/fire": "^6.0.2",
-    "@angular/forms": "~10.0.2",
-    "@angular/material": "^10.0.1",
-    "@angular/platform-browser": "~10.0.2",
-    "@angular/platform-browser-dynamic": "~10.0.2",
-    "@angular/router": "~10.0.2",
-    "@ngneat/transloco": "^2.17.3",
-    "@ngneat/transloco-messageformat": "^1.2.2",
-    "@ngxs/router-plugin": "^3.6.2",
-    "@ngxs/store": "^3.6.2",
+    "@angular/forms": "~10.1.1",
+    "@angular/material": "~10.1.1",
+    "@angular/platform-browser": "~10.1.1",
+    "@angular/platform-browser-dynamic": "~10.1.1",
+    "@angular/router": "~10.1.1",
+    "@ngneat/transloco": "^2.19.1",
+    "@ngneat/transloco-messageformat": "^1.3.0",
+    "@ngxs/router-plugin": "^3.7.0",
+    "@ngxs/store": "^3.7.0",
     "@tensorflow-models/posenet": "^2.2.1",
-    "@tensorflow/tfjs": "^2.0.1",
-    "@tensorflow/tfjs-backend-webgl": "^2.0.1",
-    "@tensorflow/tfjs-converter": "^2.0.1",
-    "@tensorflow/tfjs-core": "^2.0.1",
-    "@tensorflow/tfjs-layers": "^2.0.1",
-    "firebase": "^7.13.1",
-    "ngx-device-detector": "^1.4.5",
-    "rxjs": "~6.5.5",
+    "@tensorflow/tfjs": "^2.3.0",
+    "@tensorflow/tfjs-backend-webgl": "^2.3.0",
+    "@tensorflow/tfjs-converter": "^2.3.0",
+    "@tensorflow/tfjs-core": "^2.3.0",
+    "@tensorflow/tfjs-layers": "^2.3.0",
+    "firebase": "^7.20.0",
+    "rxjs": "~6.6.3",
     "stats.js": "^0.17.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "tslib": "^2.0.1",
+    "zone.js": "~0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": ">= 0.900 < 0.1100",
-    "@angular-devkit/build-angular": "~0.1000.1",
-    "@angular/cli": "~10.0.1",
-    "@angular/compiler-cli": "~10.0.2",
-    "@types/chrome": "0.0.122",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/architect": "^0.1001.1",
+    "@angular-devkit/build-angular": "^0.1000.8",
+    "@angular/cli": "~10.1.1",
+    "@angular/compiler-cli": "~10.1.1",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0-next.1",
-    "firebase-tools": "^8.0.0",
+    "firebase-tools": "^8.10.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
+    "inquirer-autocomplete-prompt": "^1.1.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -63,10 +60,10 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "open": "^7.0.3",
+    "open": "^7.2.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "tslint": "~6.1.3",
+    "typescript": "~4.0.2"
   }
 }
